--- a/geopolitics-react/index.html
+++ b/geopolitics-react/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>History App Demo</title>
   </head>
-  <body>
+  <body style="background-color: #666666; color: #ffffff">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
